--- a/template.html
+++ b/template.html
@@ -142,7 +142,7 @@
                                                         <tr>
                                                             <td>
                                                                 <table class="table__header"
-                                                                    style="font-family: Din Pro; min-width: 400px; max-width: 510px; width: 100%; background-color: #7EB928; margin: 0 auto; border-top-left-radius: 8px; border-top-right-radius: 8px; padding-bottom: 5px;">
+                                                                    style="font-family: Din Pro; min-width: 400px; width: 100%; background-color: #7EB928; margin: 0 auto; border-top-left-radius: 8px; border-top-right-radius: 8px; padding-bottom: 5px;">
                                                                     <tbody>
                                                                         <tr class="table__tr">
                                                                             <td
